fixed text overflow

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,3 +1,6 @@
+.item-page {
+	max-width: 90%;
+}
 .home-buttons {
 	grid-column: 1;
 	justify-content: flex-start;
